@@ -1,3 +1,7 @@
+Sigil v0.1.5 <ADD DATE>
+    - fixed issue with Sigil incorrectly loading (and therefore subsequently saving) "date"
+    OPF elements with "event" attributes (issue 144)
+
 Sigil v0.1.4 2009.10.08.
     - SGF files are now associated with Sigil on Windows (issue #135)
     - SGF files are now associated with Sigil on Mac OS X (issue #10)
